--- a/styles/style.css
+++ b/styles/style.css
@@ -1,46 +1,42 @@
-body{
+body {
     text-align: center;
+    background-color: rgb(255, 249, 249)(228, 234, 243, 0.283);
 }
 
-h1{
-    font-family: Arial, Helvetica, sans-serif;
-}
-
-.square{
-    width: 100px;
-    height: 100px;
-    background-color: beige;
-    border: 1px solid gray;
+.quadrado {
+    text-align: center;
+    width: 50px;
+    background: #eee;
     display: inline-block;
+    padding: 40px;
+    font-size: 60px;
+    margin: 5px;
+    cursor: pointer;
+    color: #eee;
 }
 
-.o{
- position: relative;
+.jogador, .vencedor {
+    font-size: 30px;
+    margin-top: 10px;
+    font-weight: 900;
 }
 
-.o:after{
-    position: absolute;
-    content:"\0058";
-    font-size: 50px;
-    line-height: 100px;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-
+button {
+    margin-top: 10px;
+    width: 100px;
+    height: 30px;
+    background: rgba(169, 242, 193, 0.284);
+    cursor: pointer;
+    
 }
-.x{
-    position: relative;
-   }
+footer{
 
-.x:after{
-    position: absolute;
-    content:"\004f";
-    font-size: 50px;
-    line-height: 100px;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-
+    width: 100%;
+    padding: 05px;
+    display: flex;
+    justify-content: center;
+    
+    background: rgba(233, 229, 229, 0.141);
+    color: #cec6d3;
+    font-size: x-small;
 }
